Fixed error so now only udate an state-action once

--- a/Lab7/MC Control with Epsilon-Greedy Policies.ipynb
+++ b/Lab7/MC Control with Epsilon-Greedy Policies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,14 +120,18 @@
     "            if done:\n",
     "                break\n",
     "            state = next_state\n",
-    "            \n",
-    "        for s,a,r in episode:\n",
-    "            state = tuple(s)\n",
+    "        \n",
+    "        # Find all state-actions we visited:\n",
+    "        episode_set = set([(x[0],x[1]) for x in episode])\n",
+    "        \n",
+    "        for state_action in episode_set:\n",
+    "            state = state_action[0]\n",
+    "            action = state_action[1]\n",
     "            # Find the first occurance of the state in the episode\n",
     "            \n",
     "            ## Do we need to compare both state and action?\n",
     "            try:\n",
-    "                first_occurence_idx = next(i for i,x in enumerate(episode) if (x[0] == state and x[1]==a))\n",
+    "                first_occurence_idx = next(i for i,x in enumerate(episode) if (x[0] == state and x[1]==action))\n",
     "            except StopIteration:\n",
     "                print(\"Didn't find the state and action in episode, something is wrong!!\")\n",
     "                \n",
@@ -138,13 +142,13 @@
     "            # Sum up all rewards since the first occurance\n",
     "            G = sum([x[2]*(discount_factor**i) for i,x in enumerate(episode[first_occurence_idx:])])\n",
     "            # Calculate average return for this state over all sampled episodes\n",
-    "            returns_sum[state,a] += G\n",
-    "            returns_count[state,a] += 1.0\n",
+    "            returns_sum[state,action] += G\n",
+    "            returns_count[state,action] += 1.0\n",
     "            \n",
     "            ### CACLCULATE NEW Q HERE??\n",
     "#             current_state = episode[first_occurence_idx][0]\n",
     "#             current_action = episode[first_occurence_idx][1]\n",
-    "            Q[state][a] = returns_sum[state,a]/returns_count[state,a]\n",
+    "            Q[state][action] = returns_sum[state,action]/returns_count[state,action]\n",
     "            \n",
     "            \n",
     "            \n",
@@ -154,15 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 500000/500000.\n",
-      " 489.36384150000004 s\n"
+      "Episode 24000/500000."
      ]
     }
    ],
@@ -213,17 +216,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Figure size 1440x360 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'banana', 'cherry', 'apple'}\n"
+     ]
     }
    ],
    "source": []
